# sweeplsd

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml
apps/: sweeplsd_cli.cpp  sweeplsd_dump_stages.cpp  sweeplsd_hotspots.cpp  sweeplsd_profile.cpp
bench/: CMakeLists.txt  README.md  edlines.cpp  edlines.hpp  edlines_runner.cpp  edreal_io.hpp  evaluate.cpp  gen_isotropy.cpp  mlsd_io.hpp  time_methods.cpp  vp_bestcfg.cpp  yud_eval.cpp
cmake/: sweeplsdConfig.cmake.in
docs/: benchmarks.html  evaluation.html  fpga.html  index.html  profiling.md  style.css  vp_evaluation.html
docs/assets/iso/: iso_out.txt
examples/: manhattan_frame.cpp  opencv_detect.cpp  vanishing_points.cpp
hls/: CMakeLists.txt  DESIGN.md
hls/compat/: hls_stream_compat.hpp
hls/host/: finalize.hpp
hls/reports/: csynth.rpt  sweeplsd_core_top_cosim.rpt
hls/scripts/: run_hls.tcl
hls/src/: backend.cpp  backend.hpp  frontend.cpp  frontend.hpp  hls_types.hpp
hls/tb/: tb_frontend.cpp
hls/tools/: density_probe.cpp  fifo_dropsim.cpp  fifo_dropviz.cpp  moment_probe.cpp  stripe_probe.cpp
include/sweeplsd/: image.hpp  io.hpp  opencv.hpp  sweeplsd.hpp
rtl/: CMakeLists.txt  DESIGN.md
rtl/boards/atlys/: README.md  atlys.ucf  atlys_rx.ucf  atlys_rx_top.v  atlys_top.v  build.sh  build_rx.sh  dvid_out.v  edid_rom_720p.vhd  live_core.v  overlay_mask.v  pattern_gen.v  tmds_encoder.v  uart_telemetry.v  vtgen.v
rtl/core/: backend.v  endpoint_core.v  event_fifo.v  event_pack.v  fe_chain.v  hyst_hist.v  judge_unit.v  stage_edge.v  stage_feature.v  stage_gauss.v  stage_gradient.v  sweep_core.v
rtl/synth_be/: be_synth.v  run.sh
rtl/synth_fe/: front_synth.v  run.sh
rtl/tb/: replay_ops.txt  run_rtl150.sh  run_tb.sh  tb_backend.v  tb_backend_burst.v  tb_backend_gpres.v  tb_backend_prof.v  tb_backend_rowprof.v  tb_burst_mon.v  tb_core_chain.v  tb_droppolicy.v  tb_dropwipe.v  tb_edge.v  tb_feature.v  tb_frontend_chain.v  tb_gauss.v  tb_gradient.v  tb_judge.v  tb_judge_fuzz.v  tb_judge_replay.v  tb_live.v  tb_live_dense.v  tb_sweep_core.v  tb_tmds.v
rtl/tb/vectors/: lines64_dir.hex  lines64_events.hex  lines64_feat.hex  lines64_gray.hex  lines64_imp_edge.hex  lines64_imp_events.hex  lines64_imp_feat.hex  lines64_imp_gauss.hex  lines64_imp_meta.txt  lines64_imp_records.hex  lines64_meta.txt  lines64_power.hex  lines64_records.hex  noise64_dir.hex  noise64_edge.hex  noise64_events.hex  noise64_feat.hex  noise64_gray.hex  noise64_imp_edge.hex  noise64_imp_events.hex  noise64_imp_feat.hex  noise64_imp_gauss.hex  noise64_imp_meta.txt  noise64_meta.txt  noise64_power.hex  noise64_records.hex  tiny16_edge.hex  tiny16_events.hex  tiny16_feat.hex  tiny16_gauss.hex  tiny16_imp_dir.hex  tiny16_imp_edge.hex  tiny16_imp_events.hex  tiny16_imp_feat.hex  tiny16_imp_gray.hex  tiny16_imp_meta.txt  tiny16_meta.txt  tiny16_power.hex
rtl/tools/: demo_scene.cpp  dump_vectors.cpp
src/: edge.cpp  feature.cpp  gaussian.cpp  gradient.cpp  io.cpp  kernels.hpp  labeling.cpp  stages.hpp  sweeplsd.cpp  sweeplsd_onepass.cpp
tests/: test_sweeplsd.cpp
tools/: build_profile.bat  dump_segments.cpp  line_profiler.cpp  nyu_export.py  profile_driver.cpp  render_compare150.py  vp_bestcfg_cv.py  yud_export.py
